committing attempt at importing current survey html and css. Succesfully added component css but failed to link to main stylesheet

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,8 @@
     <script src="/angular2/bundles/angular2.dev.js"></script>
     <script src="/angular2/bundles/router.dev.js"></script>
 
+    <link rel="=stylesheet"  type="text/css" href="/public/stylesheets/style.css"></stylesheet>
+
 
     <!-- <link rel="stylesheet" href="style.css"/> -->
 
