--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-/*@import url("../fonts/HWT_Artz.otf");
+@import url("../fonts/HWT_Artz.otf");
 @import url("../fonts/Mastoc_PersonalUseOnly.ttf");
 @import url("../fonts/opensans-bold.ttf");
 @import url("../fonts/OpenSans-Regular.ttf");
 @import url("../fonts/OpenSans-Light.ttf");
 @import url("../fonts/OpenSans-Italic.ttf");
 @import url("../fonts/OpenSans-Semibold.ttf");
-@import url("../fonts/ProximaNova-Reg.ttf");*/
+@import url("../fonts/ProximaNova-Reg.ttf");
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
