Finally loads style.css. doesnt load fonts and requesting bootstrap styles. also, translate css to scss

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,9 @@
   <head>
   <base href="/"
     <title>Angular 2 QuickStart</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">  
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -14,10 +16,9 @@
     <script src="/angular2/bundles/angular2.dev.js"></script>
     <script src="/angular2/bundles/router.dev.js"></script>
 
-    <link rel="=stylesheet"  type="text/css" href="/public/stylesheets/style.css"></stylesheet>
+    <link href="style.css" rel="stylesheet">
 
 
-    <!-- <link rel="stylesheet" href="style.css"/> -->
 
     <!-- 2. Configure SystemJS -->
     <script>
