--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
 <html>
   <head>
   <base href="/"
-    <title>Angular 2 QuickStart</title>
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">  
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="/es6-shim/es6-shim.min.js"></script>
@@ -15,8 +14,8 @@
     <script src="/rxjs/bundles/Rx.js"></script>
     <script src="/angular2/bundles/angular2.dev.js"></script>
     <script src="/angular2/bundles/router.dev.js"></script>
-
-    <link href="style.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
 
 
 
@@ -28,6 +27,9 @@
           app: {
             format: 'register',
             defaultExtension: 'js'
+          },
+          'js/typescript': {
+            defaultExtension: 'ts'
           }
         },
         map: {
